--- a/pages/walkthrough/walkthrough.html
+++ b/pages/walkthrough/walkthrough.html
@@ -4,5 +4,5 @@
     <p>
       Bulawayo Progressive Residents Association (BPRA) is a community driven and membership-based organisation with a view of providing a non-partisan and issue-based platform for effective residents and stakeholder participation in local governance
     </p>
-    <div style="padding: 0 25px"><button ion-button block color="secondary" (click)="start()">Learn More</button></div>
+    <div style="padding: 0 25px"><button ion-button block color="light" (click)="start()">Explore</button></div>
 </ion-content>
