Many changes made
Councillors added
Feedback screen added

--- a/pages/details/contact/contact.html
+++ b/pages/details/contact/contact.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="dark">
+  <ion-navbar color="primary">
     <ion-title>Contact Us</ion-title>
   </ion-navbar>
 </ion-header>
@@ -7,16 +7,17 @@
 
 <ion-content>
 	<ion-card>
-		<a href="whatsapp://send?text=Hello&phone=+263782156637">
+		<a href="whatsapp://send?text=Hello&phone=263772788949">
 			<ion-item>
 				<ion-avatar item-start>
 					<img src="assets/icons/contact/whatsapp.png">
 				</ion-avatar>
 				<h2>Whatsapp</h2>
-				<p>Contact Via WhatsApp</p>
+				<p>Contact via WhatsApp</p>
 			</ion-item>
 		</a>
 	</ion-card>
+	
 
 	<ion-card>
 		<a href="tel:263782156637">
