--- a/pages/learn/contacts/contacts.html
+++ b/pages/learn/contacts/contacts.html
@@ -6,8 +6,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-content>
-      <ion-card (click)="navigate('CategoriesPage')">
+      <ion-card (click)="navigate('CouncillorsPage')">
           <ion-item>
             <ion-avatar item-start>
               <img src="assets/icons/learn/contacts/councillors.png">
