--- a/pages/learn/learn.html
+++ b/pages/learn/learn.html
@@ -1,9 +1,7 @@
 <ion-header>
-
   <ion-navbar color="primary">
-    <ion-title>BPRA Citizen App</ion-title>
+    <ion-title>BPRA Active Citizen App</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
@@ -48,7 +46,17 @@
     </ion-item>
   </ion-card>
 
-  <ion-card (click)="navigate('HousingPage', 'General Documents')">
+  <ion-card (click)="navigate('ContactsPage', 'ContactsPage')">
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/icons/learn/contact.png">
+      </ion-avatar>
+      <h2>Service Provider Contacts</h2>
+      <p>Useful Contacts</p>
+    </ion-item>
+  </ion-card>
+
+  <ion-card (click)="navigate('DownloadsPage', 'General Documents')">
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/icons/learn/download.png">
@@ -58,7 +66,7 @@
     </ion-item>
   </ion-card>
 
-  <ion-card (click)="navigate('CategoriesPage', 'General Documents')">
+  <!--<ion-card (click)="navigate('CategoriesPage', 'General Documents')">
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/icons/learn/tender.png">
@@ -66,7 +74,7 @@
       <h2>Tenders</h2>
       <p>Find Tenders</p>
     </ion-item>
-  </ion-card>
+  </ion-card>-->
 
   <ion-card (click)="navigate('HousingPage', 'Special Projects')">
     <ion-item>
@@ -75,16 +83,6 @@
       </ion-avatar>
       <h2>Special Projects</h2>
       <p>Information on Government Projects</p>
-    </ion-item>
-  </ion-card>
-
-  <ion-card (click)="navigate('ContactsPage', 'ContactsPage')">
-    <ion-item>
-      <ion-avatar item-start>
-        <img src="assets/icons/learn/contact.png">
-      </ion-avatar>
-      <h2>Service Provider Contacts</h2>
-      <p>Useful Contacts</p>
     </ion-item>
   </ion-card>
 
