Many changes done here

--- a/pages/comment-modal/comment-modal.html
+++ b/pages/comment-modal/comment-modal.html
@@ -16,12 +16,8 @@
         <ion-input type="text" [(ngModel)]="name"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label stacked>Your Email</ion-label>
-        <ion-input type="text" [(ngModel)]="email"></ion-input>
-      </ion-item>
-      <ion-item>
         <ion-label stacked>Type Comment Here</ion-label>
-        <ion-input type="text-area" [(ngModel)]="comment"></ion-input>
+        <ion-input type="text-area" [(ngModel)]="description"></ion-input>
       </ion-item>
       
       <ion-row>
