--- a/pages/details/contact/contact.html
+++ b/pages/details/contact/contact.html
@@ -6,53 +6,68 @@
 
 
 <ion-content>
-	<ion-card>
-		<a href="whatsapp://send?text=Hello&phone=263772788949">
-			<ion-item>
-				<ion-avatar item-start>
-					<img src="assets/icons/contact/whatsapp.png">
-				</ion-avatar>
-				<h2>Whatsapp</h2>
-				<p>Contact via WhatsApp</p>
-			</ion-item>
-		</a>
-	</ion-card>
-	
+  <ion-list lines="none">
+  <a href="tel:02961196"></a>
+    <ion-item>
+	<ion-icon item-start name="call"></ion-icon>
+      <span>Landline</span> <span item-end>(029)61196</span>
+    </ion-item>
+  </a>
 
-	<ion-card>
-		<a href="tel:263782156637">
-			<ion-item>
-				<ion-avatar item-start>
-					<img src="assets/icons/contact/call.png">
-				</ion-avatar>
-				<h2>Call Us</h2>
-				<p>Direct call us</p>
-			</ion-item>
-		</a>
-	</ion-card>
+  <a href="tel:0771902403">
+    <ion-item>
+		<ion-icon item-start name="call"></ion-icon>
+       <span item-end>0771081494</span>
+    </ion-item>
+  </a>
 
-	<ion-card>
-		<a href="mailto:ndubewebdesigner@gmail.com">
-			<ion-item>
-				<ion-avatar item-start>
-					<img src="assets/icons/contact/envelope.png">
-				</ion-avatar>
-				<h2>Email</h2>
-				<p>Report via Email</p>
-			</ion-item>
-		</a>
-	</ion-card>
+  <a href="tel:0775233581">
+    <ion-item>
+		<ion-icon item-start name="logo-whatsapp"></ion-icon>
+       <span item-end>0775233581</span>
+    </ion-item>
+  </a>
 
-	<ion-card>
-		<a href="sms:+26312345678">
-			<ion-item>
-				<ion-avatar item-start>
-					<img src="assets/icons/contact/sms.png">
-				</ion-avatar>
-				<h2>Text Message</h2>
-				<p>Send report via SMS</p>
-			</ion-item>
-		</a>
-	</ion-card>
+  <a href="tel:0779683100">
+    <ion-item>
+	<ion-icon item-start name="logo-whatsapp"></ion-icon>
+       <span item-end>0779683100</span>
+    </ion-item>
+  </a>
+
+  <a href="tel:0772682275">
+    <ion-item>
+	  <ion-icon item-start name="logo-whatsapp"></ion-icon>
+       <span item-end>0772682275</span>
+    </ion-item>
+  </a>
+
+  <a href="mailto:progressiveresidents@gmail.com">
+    <ion-item>
+	  <ion-icon item-start name="mail"></ion-icon>
+      <span>Email</span> <span item-end>progressiveresidents@gmail.com</span>
+    </ion-item>
+  </a>
+
+  <a href="twitter.com/byopra">
+    <ion-item>
+	  <ion-icon item-start name="logo-twitter"></ion-icon>
+      <span>Twitter</span> <span item-end>@byopra</span>
+    </ion-item>
+  </a>
+
+  <a href="facebook.com/bulawayo.progressive">
+    <ion-item>
+	  <ion-icon item-start name="logo-facebook"></ion-icon>
+      <span>Uhlelo LweZakhamizi</span>
+    </ion-item>
+  </a>
+</ion-list>
+
+  <ion-card>
+	  <ion-card-content>
+		  
+	  </ion-card-content>
+  </ion-card>
 
 </ion-content>
