--- a/pages/learn/contacts/contacts.html
+++ b/pages/learn/contacts/contacts.html
@@ -56,12 +56,12 @@
           </ion-item>
         </ion-card>
 
-        <ion-card (click)="navigate('CategoriesPage')">
+        <ion-card (click)="navigate('ZesaPage')">
           <ion-item>
             <ion-avatar item-start>
               <img src="assets/icons/learn/contacts/zesa.png">
             </ion-avatar>
-            <h2>Electricity Supply</h2>
+            <h2>ZESA Faults</h2>
             <ion-icon name="ios-arrow-forward" item-end small></ion-icon>
           </ion-item>
         </ion-card>
