--- a/pages/learn/learn.html
+++ b/pages/learn/learn.html
@@ -12,7 +12,7 @@
         <img src="assets/icons/learn/water4.png">
       </ion-avatar>
       <h2>Water & Sanitation</h2>
-      <p>State of water in Bulawayo</p>
+      <p>Bulawayo my thirsty city</p>
     </ion-item>
   </ion-card>
 
@@ -22,7 +22,7 @@
         <img src="assets/icons/learn/house.png">
       </ion-avatar>
       <h2>Housing</h2>
-      <p>Housing statistics & more</p>
+      <p>Affordable land to the urban poor</p>
     </ion-item>
   </ion-card>
 
@@ -39,10 +39,10 @@
   <ion-card (click)="navigate('HousingPage', 'Roads & Maintenance')">
     <ion-item>
       <ion-avatar item-start>
-        <img src="assets/icons/learn/road.png">
+        <img src="assets/icons/learn/money.png">
       </ion-avatar>
-      <h2>Roads & Maintenance</h2>
-      <p>Road Projects Information</p>
+      <h2>Follow Your Dollar</h2>
+      <p>Monitoring budget performance</p>
     </ion-item>
   </ion-card>
 
@@ -81,7 +81,7 @@
       <ion-avatar item-start>
         <img src="assets/icons/learn/projects.png">
       </ion-avatar>
-      <h2>Special Projects</h2>
+      <h2>Service Delivery Advocacy</h2>
       <p>Information on Government Projects</p>
     </ion-item>
   </ion-card>
