--- a/pages/details/details.html
+++ b/pages/details/details.html
@@ -17,23 +17,18 @@
         About BPRA
       </ion-item>
     </ion-card>
-    <ion-card>
-      <ion-item>
-          <ion-icon name="done-all" item-start></ion-icon>
-          BPRA Updates
-      </ion-item>
-    </ion-card>
+  
     <ion-card>
       <ion-item>
           <ion-icon name="book" item-start></ion-icon>
-          Success Stories
+          Significant Change Stories
       </ion-item>
     </ion-card>
 
     <ion-card>
         <ion-item>
           <ion-icon name="calendar" item-start></ion-icon>
-          Our Events
+          Upcoming Activities
         </ion-item>
     </ion-card>
 
