--- a/pages/learn/learn.html
+++ b/pages/learn/learn.html
@@ -6,7 +6,7 @@
 
 
 <ion-content>
-  <ion-card (click)="navigate('HousingPage', 'Water & Sanitation')">
+  <ion-card (click)="navigate('WaterPage', 'Water & Sanitation')">
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/icons/learn/water4.png">
