Pages fixed and linked to data services

--- a/pages/learn/learn.html
+++ b/pages/learn/learn.html
@@ -26,7 +26,17 @@
     </ion-item>
   </ion-card>
 
-  <ion-card (click)="navigate('HousingPage', 'Health')">
+  <ion-card (click)="navigate('ElectricityPage', 'Electricity')">
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/icons/learn/electricity.png">
+      </ion-avatar>
+      <h2>Electricity</h2>
+      <p>State of Bulawayo electricity</p>
+    </ion-item>
+  </ion-card>
+
+  <ion-card (click)="navigate('HealthPage', 'Health')">
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/icons/learn/health2.png">
@@ -36,7 +46,7 @@
     </ion-item>
   </ion-card>
 
-  <ion-card (click)="navigate('HousingPage', 'Roads & Maintenance')">
+  <ion-card (click)="navigate('FollowDollarPage', 'Follow Your Dollar')">
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/icons/learn/money.png">
@@ -46,7 +56,7 @@
     </ion-item>
   </ion-card>
 
-  <ion-card (click)="navigate('ContactsPage', 'ContactsPage')">
+  <ion-card (click)="navigate('ServiceDeliveryPage', 'Service Delivery Advocacy')">
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/icons/learn/contact.png">
