--- a/pages/details/details.html
+++ b/pages/details/details.html
@@ -18,14 +18,14 @@
       </ion-item>
     </ion-card>
   
-    <ion-card>
+    <ion-card (click)="navigate('StoriesPage', 'R')">
       <ion-item>
           <ion-icon name="book" item-start></ion-icon>
           Significant Change Stories
       </ion-item>
     </ion-card>
 
-    <ion-card>
+    <ion-card (click)="navigate('EventsPage', 'R')">
         <ion-item>
           <ion-icon name="calendar" item-start></ion-icon>
           Upcoming Activities
