--- a/pages/details/contact/contact.html
+++ b/pages/details/contact/contact.html
@@ -7,67 +7,61 @@
 
 <ion-content>
   <ion-list lines="none">
-  <a href="tel:02961196"></a>
+  <a href="tel:02961196">
     <ion-item>
-	<ion-icon item-start name="call"></ion-icon>
-      <span>Landline</span> <span item-end>(029)61196</span>
+	<ion-icon color="gray" item-start name="call"></ion-icon>
+      <span item-end>(029)61196</span>
     </ion-item>
   </a>
 
   <a href="tel:0771902403">
     <ion-item>
-		<ion-icon item-start name="call"></ion-icon>
+		<ion-icon color="gray" item-start name="call"></ion-icon>
        <span item-end>0771081494</span>
     </ion-item>
   </a>
 
-  <a href="tel:0775233581">
+  <a href="whatsapp://send?text=Hello&phone=+263775233581">
     <ion-item>
-		<ion-icon item-start name="logo-whatsapp"></ion-icon>
+		<ion-icon color="whatsapp" item-start name="logo-whatsapp"></ion-icon>
        <span item-end>0775233581</span>
     </ion-item>
   </a>
 
-  <a href="tel:0779683100">
+  <a href="whatsapp://send?text=Hello&phone=+263779683100">
     <ion-item>
-	<ion-icon item-start name="logo-whatsapp"></ion-icon>
+	<ion-icon color="whatsapp" item-start name="logo-whatsapp"></ion-icon>
        <span item-end>0779683100</span>
     </ion-item>
   </a>
 
-  <a href="tel:0772682275">
+  <a href="whatsapp://send?text=Hello&phone=+263772682275">
     <ion-item>
-	  <ion-icon item-start name="logo-whatsapp"></ion-icon>
+	  <ion-icon color="whatsapp" item-start name="logo-whatsapp"></ion-icon>
        <span item-end>0772682275</span>
     </ion-item>
   </a>
 
   <a href="mailto:progressiveresidents@gmail.com">
     <ion-item>
-	  <ion-icon item-start name="mail"></ion-icon>
-      <span>Email</span> <span item-end>progressiveresidents@gmail.com</span>
+	  <ion-icon color="gray" item-start name="mail"></ion-icon>
+      <span item-end>progressiveresidents@gmail.com</span>
     </ion-item>
   </a>
 
   <a href="twitter.com/byopra">
     <ion-item>
-	  <ion-icon item-start name="logo-twitter"></ion-icon>
-      <span>Twitter</span> <span item-end>@byopra</span>
+	  <ion-icon color="twitter" item-start name="logo-twitter"></ion-icon>
+      <span item-end>@byopra</span>
     </ion-item>
   </a>
 
   <a href="facebook.com/bulawayo.progressive">
     <ion-item>
-	  <ion-icon item-start name="logo-facebook"></ion-icon>
-      <span>Uhlelo LweZakhamizi</span>
+	  <ion-icon color="facebook" item-start name="logo-facebook"></ion-icon>
+      <span item-end>Uhlelo LweZakhamizi</span>
     </ion-item>
   </a>
 </ion-list>
-
-  <ion-card>
-	  <ion-card-content>
-		  
-	  </ion-card-content>
-  </ion-card>
 
 </ion-content>
