--- a/pages/details/stories/stories.html
+++ b/pages/details/stories/stories.html
@@ -6,6 +6,15 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+    <ion-card *ngFor="let story of stories" (click)="itemTapped($event, story)">
+        <ion-item>
+          <ion-avatar item-start *ngIf="story.thumbnail != null">
+              <img [src]="story.thumbnail" alt="">
+          </ion-avatar>
+          <h2 [innerHTML]="story.title"></h2>
+          <p [innerHTML]="story.excerpt"></p>
+        </ion-item>
+    </ion-card>
 
 </ion-content>
