--- a/pages/learn/electricity/electricity.html
+++ b/pages/learn/electricity/electricity.html
@@ -7,7 +7,7 @@
 
 
 <ion-content>
-    <ion-slides spaceBetween="3" slidesPerView="1.2" pager="false">
+    <!-- <ion-slides spaceBetween="3" slidesPerView="1.2" pager="false">
         <ion-slide (click)="navigate()">
           <ion-card class="poster" [style.backgroundImage]="'url(../assets/img/slides/water.jpg)'">
         </ion-card>
@@ -23,16 +23,8 @@
         </ion-card>
         </ion-slide>
         
-      </ion-slides>
-  <ion-card>
-    <a href="assets/docs/water_shedding.pdf">
-      <ion-item>
-        <h2>Water Shedding 29-1-2019</h2>
-        <p>Download the schedule</p>
-        <ion-icon name="download" item-end></ion-icon>
-      </ion-item>
-    </a>
-  </ion-card>
+      </ion-slides> -->
+
 
   <ion-card *ngFor="let post of posts" (click)="itemTapped($event, post)">
       <ion-item>
