--- a/pages/learn/learn.html
+++ b/pages/learn/learn.html
@@ -6,6 +6,16 @@
 
 
 <ion-content>
+  <ion-card (click)="navigate('DetailsPage', 'BPRA')">
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/img/logo1.png">
+      </ion-avatar>
+      <h2>BPRA</h2>
+      <p>Learn More About BPRA</p>
+    </ion-item>
+  </ion-card>
+
   <ion-card (click)="navigate('WaterPage', 'Water & Sanitation')">
     <ion-item>
       <ion-avatar item-start>
@@ -16,13 +26,13 @@
     </ion-item>
   </ion-card>
 
-  <ion-card (click)="navigate('HousingPage', 'Housing')">
+  <ion-card (click)="navigate('HealthPage', 'Health')">
     <ion-item>
       <ion-avatar item-start>
-        <img src="assets/icons/learn/house.png">
+        <img src="assets/icons/learn/health2.png">
       </ion-avatar>
-      <h2>Housing</h2>
-      <p>Affordable land to the urban poor</p>
+      <h2>Health</h2>
+      <p>Information on health services</p>
     </ion-item>
   </ion-card>
 
@@ -36,15 +46,16 @@
     </ion-item>
   </ion-card>
 
-  <ion-card (click)="navigate('HealthPage', 'Health')">
+  <ion-card (click)="navigate('HousingPage', 'Housing')">
     <ion-item>
       <ion-avatar item-start>
-        <img src="assets/icons/learn/health2.png">
+        <img src="assets/icons/learn/house.png">
       </ion-avatar>
-      <h2>Health</h2>
-      <p>Information on health services</p>
+      <h2>Housing</h2>
+      <p>Affordable land to the urban poor</p>
     </ion-item>
   </ion-card>
+
 
   <ion-card (click)="navigate('FollowDollarPage', 'Follow Your Dollar')">
     <ion-item>
@@ -86,7 +97,7 @@
     </ion-item>
   </ion-card>-->
 
-  <ion-card (click)="navigate('HousingPage', 'Special Projects')">
+  <ion-card (click)="navigate('ServiceDeliveryPage', 'Special Projects')">
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/icons/learn/projects.png">
