--- a/pages/learn/service-delivery/service-delivery.html
+++ b/pages/learn/service-delivery/service-delivery.html
@@ -1,18 +1,38 @@
-<!--
-  Generated template for the ServiceDeliveryPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>service-delivery</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Service Delivery Advocacy</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+<!--   <ion-slides spaceBetween="3" slidesPerView="1.2" pager="false">
+    <ion-slide (click)="navigate()">
+      <ion-card class="poster" [style.backgroundImage]="'url(../assets/img/slides/water.jpg)'">
+    </ion-card>
+    </ion-slide>
 
+    <ion-slide>
+      <ion-card class="poster" [style.backgroundImage]="'url(../assets/img/slides/water1.jpg)'">
+    </ion-card>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-card class="poster" [style.backgroundImage]="'url(../assets/img/slides/water2.jpg)'">
+    </ion-card>
+    </ion-slide>
+    
+  </ion-slides> -->
+
+
+<ion-card *ngFor="let post of posts" (click)="itemTapped($event, post)">
+  <ion-item>
+    <ion-avatar item-start>
+        <img [src]="post?.thumbnail" alt="">
+    </ion-avatar>
+    <h2 [innerHTML]="post.title"></h2>
+    <p [innerHTML]="post.excerpt"></p>
+  </ion-item>
+</ion-card>
 </ion-content>
